<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Sharing WishList</string>

    <string name="signUp">Sign Up</string>
    <string name="signIn">Sign In</string>
    <string name="signOut">Sign Out</string>

    <string name="main_signOut">◀︎Sign Out</string>
    <string name="main_createWish">ADD▶</string>

    <!-- CreateActivity -->
    <string name="create_title_format_error">The title cannot be blank</string>
    
    <!-- Create -->
    <string name="create_cancel">◀Cancel</string>
    <string name="create_commitCreate">ADD▶︎</string>
    <string name="create_title">Title</string>
    <string name="create_content">Content</string>

    <!-- MainActivity -->

    <!-- Sign Up -->
    <string name="signUp_userId">ID</string>
    <string name="signUp_nickName">Nickname</string>
    <string name="signUp_password">Password</string>
    <string name="signUp_confirmPassword">Confirm Password</string>
    <string name="signUp_confirmPassword_incorrect">Password Incorrect</string>

    <!-- Sign In -->
    <string name="signIn_userId">ID</string>
    <string name="signIn_password">Password</string>
    <string name="signIn_keepSignIn">Keep me signed in</string>

</resources>
