<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:src="@drawable/text_logo"/>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_signIn_userId"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:background="@android:color/transparent"
                    android:hint="@string/signUp_userId"
                    android:inputType="textEmailAddress"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_signIn_password"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:background="@android:color/transparent"
                    android:hint="@string/signUp_password"
                    android:inputType="textPassword"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_signIn_signIn"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_margin="8dp"
                android:background="@drawable/bg_btn_sign_pri"
                android:text="@string/signIn"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_signIn_goToSignUp"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_margin="8dp"
                android:background="@drawable/bg_btn_sign_sec"
                android:text="@string/signUp"
                android:textAllCaps="false"
                android:textColor="@color/dark_green"
                android:textSize="16sp" />

        </LinearLayout>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>