<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.CreateActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout_create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:elevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_create_commitCreate"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/bg_btn_pri"
            android:elevation="4dp"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/create_commitCreate"
            android:textColor="@color/white"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/tv_create_cancel"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/bg_btn_pri"
            android:elevation="4dp"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/create_cancel"
            android:textColor="@color/white"
            android:textSize="16dp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/relativeLayout_create">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout_create_title"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_margin="8dp"
                android:background="@color/bg_nor"
                app:boxStrokeColor="@color/dark_green"
                app:hintTextColor="@color/dark_green">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_create_title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:hint="@string/create_title"
                    android:inputType="text"
                    android:textCursorDrawable="@drawable/cursor_textinputlayout"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:background="@color/bg_nor"
                app:boxStrokeColor="@color/dark_green"
                app:hintTextColor="@color/dark_green">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_create_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:gravity="start"
                    android:hint="@string/create_content"
                    android:inputType="textMultiLine"
                    android:maxLength="150"
                    android:scrollHorizontally="true"
                    android:textCursorDrawable="@drawable/cursor_textinputlayout"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- TODO Color Button -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <RadioGroup
                    android:id="@+id/radioGroup_create"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/btn_create_nor"
                        android:button="@null"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginEnd="4dp"
                        android:layout_marginBottom="4dp"
                        android:layout_weight="1"
                        android:background="@drawable/selector_nor"
                        android:checked="true"
                        android:elevation="4dp" />

                    <RadioButton
                        android:id="@+id/btn_create_red"
                        android:layout_width="match_parent"
                        android:button="@null"
                        android:layout_height="match_parent"
                        android:layout_marginStart="4dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginEnd="4dp"
                        android:layout_marginBottom="4dp"
                        android:layout_weight="1"
                        android:background="@drawable/selector_red"
                        android:elevation="4dp" />

                    <RadioButton
                        android:id="@+id/btn_create_gre"
                        android:layout_width="match_parent"
                        android:button="@null"
                        android:layout_height="match_parent"
                        android:layout_marginStart="4dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginEnd="4dp"
                        android:layout_marginBottom="4dp"
                        android:layout_weight="1"
                        android:background="@drawable/selector_gre"
                        android:elevation="4dp" />

                    <RadioButton
                        android:id="@+id/btn_create_blu"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="4dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginEnd="8dp"
                        android:button="@null"
                        android:layout_marginBottom="4dp"
                        android:layout_weight="1"
                        android:background="@drawable/selector_blu"
                        android:elevation="4dp" />
                </RadioGroup>
            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>